# Empiric

./: .gitignore  Idea.md  LICENSE  README.md  ReadME  TODO  launch_empiric.command  pyproject.toml
AgentLoop/: agent.py  app_runtime.py  clients.py  orchestrator.py  tools.py  ui.py  ui_desktop.py  ui_react.jsx  ui_web.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
