[project]
name = "empiric"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "docker>=7.1.0",
    "fastapi>=0.116.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "tenacity>=9.1.4",
    "uvicorn>=0.35.0",
    "websockets>=16.0",
]
